#pragma once

namespace smt
{

enum lbool
{
    False,
    True,
    Undefined
};
} // namespace smt