#pragma once

namespace smt
{

class var_value
{
public:
  var_value() {}

  virtual ~var_value() {}
};
} // namespace smt